test/extern/multilocale/externRemoteRecord3.good
externRemoteRecord3.chpl:18: error: references to remote data cannot be passed to external routines like 'foo'
